[package]
name = "eriri"
version = "1.2.1"
description = "A high-performance digital library for comics and books."
authors = ["Shiyu"]
edition = "2024"

[lib]
name = "eriri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["protocol-asset"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-persisted-scope = { version = "2.3.7", features = ["protocol-asset"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v5"] }
natord = "1.0"
percent-encoding = "2.3"
image = "0.25"
fast_image_resize = "6"
sha2 = "0.10"
rayon = "1.8"
xattr = "1.6.1"
plist = "1.8.0"
turbojpeg = "1.3.3"
memmap2 = "0.9.9"
tracing = "0.1.44"
base64 = "0.22"
objc2 = "0.6.4"
objc2-foundation = { version = "0.3.2", features = ["NSURL", "NSString", "NSData", "NSError", "NSArray"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
