[package]
name = "eriri"
version = "1.2.1"
description = "A high-performance digital library for comics and books."
authors = ["Shiyu"]
edition = "2024"
rust-version = "1.96"

[lib]
name = "eriri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-dialog = "2.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
uuid = { version = "1.23.3", features = ["v5"] }
natord = "1.0.9"
percent-encoding = "2.3.2"
image = "0.25.10"
fast_image_resize = "6.0.0"
sha2 = "0.11.0"
hex = "0.4.3"
rayon = "1.12.0"
xattr = "1.6.1"
plist = "1.9.0"
turbojpeg = "1.4.0"
memmap2 = "0.9.10"
tracing = "0.1.44"
objc2-foundation = "0.3.2"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSResponder"] }
axum = "0.8.9"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = ["fs", "compression-gzip"] }
tokio = { version = "1.52.3", features = ["net", "rt", "rt-multi-thread", "sync"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(coverage)"] }

[dev-dependencies]
tempfile = "3.27.0"
